snikket_web/scss/app.scss
/* ... */
/* linearisation / responsive stuff */

@media screen and (max-width: $medium-screen-threshold) {
	.form.layout-expanded {
		margin-left: 0;
		margin-right: 0;
	}

	div.elevated, main > div.box {
		margin-left: 0;
		margin-right: 0;
	}
}

@media screen and (max-width: $small-screen-threshold) {
	.form.layout-expanded .box {
		margin-left: 0;
		margin-right: 0;
	}

	.box > ul  {
		padding-left: $w-0;
	}


	th.collapsible, td.collapsible {
		display: none;
	}

	#topbar.admin {
		> header {
			text-decoration: underline;
			text-decoration-color: $alert-500;
		}

		> div.admin-note {
			display: none;
		}
	}
}

/* clipboard button */

.copy-to-clipboard {
	cursor: pointer;
	font-style: normal;
	text-decoration: none;
}

body.no-copy .copy-to-clipboard {
	display: none !important;
}


/* magic */

pre.guru-meditation {
	width: 100%;
	overflow-x: scroll;
}


/* dark mode */

@media (prefers-color-scheme: dark) {
	a {
		color: $primary-600;
	}
	a:visited {
		color: $primary-800;
	}

	body {
		color: $gray-900;
		background-color: $gray-100;
	}

	@for $n from 1 through 6 {
		h#{$n} {
			color: $primary-900;
		}
	}

	div#topbar {
		background-color: black;
		color: $primary-900;

		> header {
			color: white;
		}
	}

	body > footer {
		background-color: $gray-200;
		color: $gray-800;
	}

	div.form {
		background-color: black;
	}

	div.form.layout-expanded {
		label {
			color: $gray-900;
		}

		textarea {
			background-color: black;
		}

		@each $type in $text-entry-inputs {
			input[type=$type] {
				background-color: black;
			}

			input[type="radio"]:checked + label:before {
				box-shadow: inset 0 0 0 $w-s3 black;
			}
		}
	}

	.box {
		background-color: black;
		border-color: $gray-800;
		color: $gray-900;

		@each $type, $colour in $box-types {
			&.#{$type} {
				border-color: nth(map-get($colours, $colour), 9);
				background-color: nth(map-get($colours, $colour), 2);
				color: nth(map-get($colours, $colour), 9);
			}
		}

		> header {
			color: white;
		}
	}

	div.welcome-cards {
		& > .card {
			background: black;
		}

		& > a.card {
			& > h2 {
				color: $primary-800;
			}
		}
	}

	div.elevated {
		background-color: black;
	}

	input[type="submit"], button, .button {
		&.primary {
			background: linear-gradient(0deg, $primary-300, $primary-400);

			&:hover, &:focus {
				background: linear-gradient(0deg, $primary-400, $primary-500);
			}

			&:active {
				background: $primary-300;
			}

			&.accent {
				background: linear-gradient(0deg, $accent-300, $accent-400);

				&:hover, &:focus {
					background: linear-gradient(0deg, $accent-400, $accent-500);
				}

				&:active {
					background: $accent-300;
				}
			}

			&.danger {
				background: linear-gradient(0deg, $alert-300, $alert-400);

				&:hover, &:focus {
					background: linear-gradient(0deg, $alert-400, $alert-500);
				}

				&:active {
					background: $alert-300;
				}
			}
		}

		&.secondary {
			background: linear-gradient(0deg, $gray-400, $gray-500);
			color: $gray-900;

			&:hover, &:focus {
				background: linear-gradient(0deg, $gray-500, $gray-600);
				color: white;
			}

			&:active {
				background: $gray-400;
				color: $gray-900;
			}

			&.accent {
				background: linear-gradient(0deg, $accent-200, $accent-300);
				color: $accent-800;

				&:hover, &:focus {
					background: linear-gradient(0deg, $accent-300, $accent-400);
				}

				&:active {
					background: $accent-200;
				}
			}

			&.danger {
				background: linear-gradient(0deg, $alert-200, $alert-300);
				color: $alert-800;

				&:hover, &:focus {
					background: linear-gradient(0deg, $alert-300, $alert-400);
				}

				&:active {
					background: $alert-200;
				}
			}
		}

		&.tertiary, .tertiary {
			color: $gray-800;

			&:hover {
				background-color: $gray-200;
				border-color: $gray-100;
				color: white;
			}

			&.accent:hover {
				background-color: $accent-200;
				border-color: $accent-100;
				color: white;
			}

			&.danger:hover {
				background-color: $alert-200;
				border-color: $alert-100;
				color: white;
			}
		}
	}

	p.form-desc.weak, p.field-desc.weak {
		color: $gray-700;
	}
}

/* tooltip magic */

.with-tooltip {
	position: relative;
	text-decoration: underline;
	text-decoration-style: dotted;
}

.with-tooltip:before {
	content: attr(data-tooltip); /* here's the magic */
	position: absolute;
	font-size: 87.05505633%;

	/* vertically center */
	bottom: 100%;
	transform: translateX(-50%);
	left: 50%;
	margin-bottom: $w-s2;

	/* basic styles */
	width:$w-l7;
	padding: $w-s1;
	background: black;
	color: $gray-900;
	text-align: center;

	display: none;
}

.with-tooltip:after {
	content: "";
	position: absolute;

	bottom: 100%;
	transform: translateX(-50%);
	left: 50%;
	margin-bottom: -$w-s1;

	/* the arrow */
	border: 10px solid black;
	border-color: black transparent transparent transparent;

	display: none;
}

.with-tooltip:hover:before, .with-tooltip:hover:after {
	display: block;
}

